# Pokemon_Champions

./: .gitignore  AGENTS.md  Cargo.toml  CodexGuide.md  README.md  build.rs  matrix.csv  package-lock.json  teams.json
backup/: README_old.md
battle/: Cargo.toml
docs/: ability-event-system.md
pokemon-battle-cli/: Cargo.toml
pokemon-battle-cli/src/: main.rs  ui.rs
pokemon-battle-core/: Cargo.toml  build.rs
pokemon-battle-core/src/: battle_logger.rs  engine.rs  i18n.rs  lib.rs  parser.rs
pokemon-battle-core/src/data/: abilities.rs  items.rs  mod.rs  moves.rs  species.rs  tests.rs  types.rs
pokemon-battle-core/src/sim/: ai.rs  battle.rs  damage.rs  faint_handler.rs  mod.rs  pokemon.rs  stats.rs  switching.rs  weather_field.rs
pokemon-battle-core/src/sim/abilities/: damage_modifiers.rs  events.rs  misc_abilities.rs  mod.rs  status_abilities.rs
pokemon-battle-core/src/sim/items/: battle_items.rs  consumable.rs  mod.rs  type_items.rs
pokemon-battle-core/src/sim/moves/: attacking.rs  flags.rs  mod.rs  secondary.rs  status.rs
pokemon-battle-core/tests/: moves_test.rs  showdown_compat_smoke.rs
reports/: pikachu_thunderbolt_vs_gyarados_splash_turn1_report.html
src/: battle.rs  items.rs  lib.rs  main.rs  matrix.rs  mcts.rs  model.rs  types.rs
teams/: cynthia.json  leon.json
tests/: battle_tests.rs  mcts_tests.rs
tmp/: rust_pikachu_thunderbolt_vs_gyarados_splash_turn1.json
tools/: ci_diff_check.sh  diff_analyzer.rs  extract_data.js  extract_items.js  generate_showdown_tests.js  update_showdown.sh
translations/: ja.json
treaning/: Cargo.toml
(+4 files in other folders)
