[package]
name = "pokemon-battle-matrix"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rand = { version = "0.8", features = ["std", "small_rng"] }
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }

[target.x86_64-unknown-linux-gnu]
runner = "systemd-run --user --scope -p MemoryMax=16G -p MemorySwapMax=2G"
