[package]
name = "pokemon-battle-cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
pokemon-battle-core = { path = "../pokemon-battle-core" }
rand = { version = "0.8", features = ["std", "small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
ui = []

[[bin]]
name = "pokemon-battle-cli"
path = "src/main.rs"

[[bin]]
name = "pokemon-battle-cli-ui"
path = "src/bin/ui.rs"
required-features = ["ui"]

[[bin]]
name = "diff_analyzer"
path = "src/bin/diff_analyzer.rs"
