[package]
name = "pokemon-battle-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0"
phf = { version = "0.11", features = ["macros"] }
rand = { version = "0.8", features = ["std", "small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
